[Feat] #17: BuildingResponse에 문 좌표 추가